<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textone"
        style="@style/textbox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/textone"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texttwo"
        style="@style/textbox"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/texttwo"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/textone"
        app:layout_constraintTop_toBottomOf="@+id/textone" />

    <TextView
        android:id="@+id/textthree"
        style="@style/textbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textthree"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/texttwo"
        app:layout_constraintTop_toTopOf="@+id/texttwo" />

    <TextView
        android:id="@+id/textfour"
        style="@style/textbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textfour"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/texttwo"
        app:layout_constraintTop_toBottomOf="@+id/textthree" />

    <TextView
        android:id="@+id/textfive"
        style="@style/textbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textfive"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/texttwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/texttwo"
        app:layout_constraintTop_toBottomOf="@+id/textfour"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bluebtn"
        android:layout_width="132dp"
        android:layout_height="41dp"
        android:text="@string/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texttwo"
        app:layout_constraintVertical_bias="0.946" />

    <Button
        android:id="@+id/greenbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="Green"
        app:layout_constraintBottom_toBottomOf="@+id/bluebtn"
        app:layout_constraintStart_toEndOf="@+id/bluebtn"
        app:layout_constraintTop_toTopOf="@+id/bluebtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cyanbtn"
        android:layout_width="136dp"
        android:layout_height="0dp"
        android:text="Cyan"
        app:layout_constraintBottom_toBottomOf="@+id/greenbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toEndOf="@+id/greenbtn"
        app:layout_constraintTop_toTopOf="@+id/greenbtn"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>